feat: use builtin query instead of tanquery
