# docs/swagger/swagger.json
@@ -347,10 +347,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/state.State"
-                            }
+                            "$ref": "#/definitions/state.State"
                         }
                     },
                     "404": {
